# my-mail-system

./: .gitignore  CMakeLists.txt  README.md
good-example/: .smtps_server.cpp  .smtps_server.h  BoostMsmSmtpsFsm.cpp  BoostMsmSmtpsFsm.h  SmtpsFsm.h  TraditionalSmtpsFsm.cpp  TraditionalSmtpsFsm.h
good-example/DBService/: db_pool.h
include/mail_system/back/db/: db_pool.h  mysql_pool.h  mysql_service.h
include/mail_system/back/entities/: mail.h  usr.h
include/mail_system/back/mailServer/: server_base.h  server_config.h  smtps_server.h
include/mail_system/back/mailServer/factory/: imaps_server_factory.h  mail_server_factory.h
include/mail_system/back/mailServer/session/: imaps_session.h  pop3s_session.h  session_base.h  smtps_session.h
include/mail_system/back/thread_pool/: boost_thread_pool.h  io_thread_pool.h  thread_pool_base.h
include/mail_system/front/business/: AttachmentManager.h  ConfigManager.h  DatabaseManager.h  MailManager.h  MailboxManager.h  NetworkManager.h  UserManager.h
include/mail_system/front/business/entities/: AttachmentDto.h  MailDto.h  MailboxDto.h  UserDto.h
sql/: create_tables.sql
src/back/mailServer/pop3s/: pop3s_server.cpp
src/back/mailServer/session/: smtps_session.cpp
src/front/business/: DatabaseManager.cpp  MailManager.cpp  UserManager.cpp
src/mail_system/back/db/: db_example.cpp  mysql_pool.cpp  mysql_service.cpp
src/mail_system/back/mailServer/: server_base.cpp
src/mail_system/front/business/: AttachmentManager.cpp  ConfigManager.cpp  MailboxManager.cpp  NetworkManager.cpp
tests/: fsm_test.cpp
(+24 files in other folders)
